[project]
name = "lca-lc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "langsmith>=0.9.7",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
